syntax = "proto3";

package vdp.model.v1alpha;

// Google api
import "google/protobuf/struct.proto";

import "google/api/field_behavior.proto";

// UnspecifiedInput represents the input of unspecified task
message UnspecifiedInput {
  // A list of unspecified task inputs
  repeated google.protobuf.Struct raw_inputs = 1;
}

// UnspecifiedOutput represents the output of unspecified task
message UnspecifiedOutput {
  // A list of unspecified task outputs
  repeated google.protobuf.Struct raw_outputs = 1
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
